# LinuxApplicationDevelopment2023

./: .gitignore  README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh  test.txt
04_Debugging/: Makefile  gdb1  gdb2  range.c
05_Regexp/: esub.c
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  remove.c
07_Environmental/: Makefile.am  configure.ac  make.sh  rhasher.c
08_I18n/: Makefile.am  configure.ac  guess.c  guess.pot  make.sh  ru.po
09_PatchDiff/: Makefile  gen_lab.c  patch1.patch  patch2.patch  patch3.patch
10_Testing/: Makefile.am  configure.ac  make.sh
10_Testing/src/: Makefile.am  buf.c  buf.h
10_Testing/tests/: Makefile.am  dummy.c  dummy.ts  upstream.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac  guess.c  guess.pot  ru.po
